2012-10-12 belangeo <belangeo@gmail.com>

    * Added new object: SumOsc: Discrete summation formulae to produce complex spectra.
    - rev 1023

2012-10-11 belangeo <belangeo@gmail.com>

    * Added new method to OscReceive and OscListReceive: setValue(path, value) let the user to initialize the value for a given path.
    - rev 1022

2012-10-05 belangeo <belangeo@gmail.com>

    * Added new functions: pa_get_input_max_channels and pa_get_output_max_channels.
    - rev 1020

2012-08-17 belangeo <belangeo@gmail.com>

    * Added new object: OscTrig: An oscillator reading a waveform table with sample accurate reset signal.
    - rev 1017

2012-08-17 belangeo <belangeo@gmail.com>

    * Added new object: TrigVal: Outputs a previously defined value on a trigger signal.
    - rev 1016

2012-08-01 belangeo <belangeo@gmail.com>

    * Added new object: CosLogTable: Construct a table from logarithmic-cosine segments in breakpoint fashion.
    - rev 1014

2012-08-01 belangeo <belangeo@gmail.com>

    * Added new object: LogTable: Construct a table from logarithmic segments in breakpoint fashion.
    - rev 1013

2012-07-31 belangeo <belangeo@gmail.com>

    * Added new object: Balance: Adjust rms power of an audio signal according to the rms power of another.
    - rev 1012

-------------------------------------------------------------------------------------

2012-06-30 belangeo <belangeo@gmail.com>

    * Added new object: CtlScan2. Scan for Midi controller number and Midi channel in input.
    - rev 1007

2012-06-26 belangeo <belangeo@gmail.com>

    * Added "offline_nb" mode to the Server, allowing non-blocking bounce to disk.
    - rev 1004

2012-06-13 belangeo <belangeo@gmail.com>

    * Fixed issue 34 : Better handling of type exceptions for arguments waiting for PyoObject, PyoTableObject or list.
    - rev 1000

2012-06-08 belangeo <belangeo@gmail.com>

    * Added ChebyTable.getNormTable() method to retrieve the normalization function for the current polynomial.